Change downmusic styles to extra.css; ADD histfacturas.php

--- a/css/extra.css
+++ b/css/extra.css
@@ -4,4 +4,23 @@ display: none;
 option:first-child{
   color: gray;
 }
-
+dialog{
+  border: 2px solid red;
+  border-radius: 5px;
+  background-color: white;
+  z-index: 999999999999999999999;
+  padding: 50px;
+}
+dialog p{
+  margin: 0;
+  padding: 0;
+}
+/* precio */
+dialog p span{
+  font-weight: bold;
+}
+dialog input[type='submit']:hover, dialog input[type='submit']:focus{
+  background-color: darkblue;
+  color: #fafafa;
+  font-weight: bold;
+}
